welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value and is not a member of Boolean
while(!estSurBiscuit()and !porteBiscuit()) {avance();}
                      ^