welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite() ; droite()
while(!estSurBiscuit()and !porteBiscuit()) {avance();}
if(estSurBiscuit) {prendBiscuit();recule}
while(porteBiscuit) {recule()}
